@@ -1,3 +1,8 @@
+2009-11-10  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Follow-up of revision 26334: LIKE on Oracle should use dbms_lob.instr() function
+	* Updated Oracle unit tests to use $GLOBALS['TYPO3_DB'] instead of a fixture to avoid side-effects on SQL rewriting
+
 2009-11-09  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Fixed bug #10965: Float database field gets converted to integer on insert (thanks to Christian Ducrot)
